; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_unmap_and_free_shared_area.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_unmap_and_free_shared_area.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sep_device = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sep_device*, i32)* @sep_unmap_and_free_shared_area to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sep_unmap_and_free_shared_area(%struct.sep_device* %0, i32 %1) #0 {
  %3 = alloca %struct.sep_device*, align 8
  %4 = alloca i32, align 4
  store %struct.sep_device* %0, %struct.sep_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.sep_device*, %struct.sep_device** %3, align 8
  %6 = getelementptr inbounds %struct.sep_device, %struct.sep_device* %5, i32 0, i32 2
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.sep_device*, %struct.sep_device** %3, align 8
  %11 = getelementptr inbounds %struct.sep_device, %struct.sep_device* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.sep_device*, %struct.sep_device** %3, align 8
  %14 = getelementptr inbounds %struct.sep_device, %struct.sep_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @dma_free_coherent(i32* %8, i32 %9, i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @dma_free_coherent(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
